Update 01-first-azure-pipelines.yml for Azure Pipelines
test

--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -37,9 +37,9 @@ stages:
           publishLocation: 'Container'
       - bash: echo "Build has been Publish "
   
-  - Stage: DEV
+  - stage: DEV
     jobs:
-    - job: DEV-BuildJob
+    - job: DEVBuildJob
       steps:
       - bash: "this is Dev build job"
       
