Update 01-first-azure-pipelines.yml for Azure Pipelines
correction

--- a/01-first-azure-pipelines.yml
+++ b/01-first-azure-pipelines.yml
@@ -41,5 +41,5 @@ stages:
     jobs:
     - job: DEVBuildJob
       steps:
-      - bash: "this is Dev build job"
+      - bash: echo "this is Dev build job"
       
