Update 03-playing -for mutliple-job-azure-pipelines.yml for Azure Pipelines

--- a/03-playing -for mutliple-job-azure-pipelines.yml
+++ b/03-playing -for mutliple-job-azure-pipelines.yml
@@ -5,7 +5,7 @@ trigger:
 strategy:
   matrix:
    linux:
-     imageName: "Redhat-latest"
+     imageName: "ubuntu-latest"
    mac:
       imageName: "macos-latest"
    windows:
