--- a/02-first-azure-pipelines.yml
+++ b/02-first-azure-pipelines.yml
@@ -31,4 +31,4 @@ stages:
        runOnce:
            deploy:
             steps:
-                - script: echo "Deploy to QA environment"
+                - script: echo "Deploy to QA environment !! with Approval required"
