--- a/04-docker-build-azure-pipelines.yml
+++ b/04-docker-build-azure-pipelines.yml
@@ -21,9 +21,9 @@ stages:
       vmImage: ubuntu-latest
     steps:
     - task: Docker@2
-      displayName: Build an image
       inputs:
-        command: build
-        dockerfile: '$(Build.SourcesDirectory)/Dockerfile'
-        tags: |
-          $(tag)
+        containerRegistry: 'tarlokdockerhub'
+        repository: 'minhastarlok40/azure-devops'
+        command: 'buildAndPush'
+        Dockerfile: '**/Dockerfile'
+        tags: '$(tag)'
