--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -14,6 +14,5 @@ steps:
   displayName: 'Run a one-line script'
 - task: AWSCLI@1
   inputs:
-    awsCredentials: 'aws-service-connection-terraform'
-    regionName: 'us-east-1'
-    awsCommand: 'sts get-caller-identity'
+    regionName: 'ap-east-1'
+    awsCommand: 'aws s3 ls'
