--- a/kubenest1-azure-pipelines-1.yml
+++ b/kubenest1-azure-pipelines-1.yml
@@ -11,7 +11,7 @@ steps:
   inputs:
     provider: 'aws'
     command: 'init'
-    workingDirectory: '$(System.DefaultWorkingDirectory)/test'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/test/iam'
     backendServiceAWS: 'test'
     backendAWSBucketName: 'tarlok-s3-tes111'
     backendAWSKey: 'kubernetes-dev.tf'
