Update kubenest1-azure-pipelines-1.yml for Azure Pipelines
apply and plan

--- a/kubenest1-azure-pipelines-1.yml
+++ b/kubenest1-azure-pipelines-1.yml
@@ -15,3 +15,11 @@ steps:
     backendServiceAWS: 'test'
     backendAWSBucketName: 'tarlok-s3-tes111'
     backendAWSKey: 'kubernetes-dev.tf'
+
+
+- task: TerraformTaskV4@4
+  inputs:
+    provider: 'aws'
+    command: 'apply'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/test/iam'
+    environmentServiceNameAWS: 'test'
