Update kubenest1-azure-pipelines-1.yml for Azure Pipelines
init,plan save

--- a/kubenest1-azure-pipelines-1.yml
+++ b/kubenest1-azure-pipelines-1.yml
@@ -16,7 +16,12 @@ steps:
     backendAWSBucketName: 'tarlok-s3-tes111'
     backendAWSKey: 'kubernetes-dev.tf'
 
-
+- task: TerraformTaskV4@4
+  inputs:
+    provider: 'aws'
+    command: 'plan'
+    workingDirectory: '$(System.DefaultWorkingDirectory)/test/iam'
+    environmentServiceNameAWS: 'test'
 - task: TerraformTaskV4@4
   inputs:
     provider: 'aws'
