Update destroy-kubenetes-azure-pipelines-2.yml for Azure Pipelines
destroy

--- a/destroy-kubenetes-azure-pipelines-2.yml
+++ b/destroy-kubenetes-azure-pipelines-2.yml
@@ -11,11 +11,11 @@ pool:
 
 steps:
 - script: echo Hello, world!
-  displayName: 'Run a one-line script'
+  displayName: 'Run a one-line script' 
 
 - task: TerraformTaskV4@4
   inputs:
     provider: 'aws'
-    command: 'destroy'
+    command: 'destroy' # this is testest
     workingDirectory: '$(System.DefaultWorkingDirectory)/test/iam'
     environmentServiceNameAWS: 'test'
