Update kubenest1-azure-pipelines-1.yml for Azure Pipelines
test

--- a/kubenest1-azure-pipelines-1.yml
+++ b/kubenest1-azure-pipelines-1.yml
@@ -14,7 +14,7 @@ steps:
     workingDirectory: '$(System.DefaultWorkingDirectory)/test/iam'
     backendServiceAWS: 'test'
     backendAWSBucketName: 'tarlok-s3-tes111'
-    backendAWSKey: '/backend/teraform.tfstate'
+    backendAWSKey: 'backend/teraform.tfstate'
 
 - task: TerraformTaskV4@4
   inputs:
