--- a/destroy-kubenetes-azure-pipelines-2.yml
+++ b/destroy-kubenetes-azure-pipelines-2.yml
@@ -19,7 +19,7 @@ steps:
     workingDirectory: '$(System.DefaultWorkingDirectory)/test/iam'
     backendServiceAWS: 'test'
     backendAWSBucketName: 'tarlok-s3-tes111'
-    backendAWSKey: 'kubernetes-dev.tf'
+    backendAWSKey: 'backend/terraform.tfstate'
 
 - task: TerraformTaskV4@4
   inputs:
